--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -46,6 +46,7 @@ body {
   
   .search-section {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
